--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="icone">
 
 
-                <canvas width="128" height="128" ></canvas>
+                <div id="icone"></div>
 
             </div>
 
